--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "yarn": ">=1.5.1"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "lint": "esw *.js server config --color",
     "lint:watch": "npm run lint -- --watch",
     "precommit": "npm run lint && npm test",
@@ -43,7 +43,7 @@
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "compression": "1.7.2",
-    "cookie-parser": "1.4.3",
+    "cookie-parser": "^1.4.3",
     "cors": "2.8.4",
     "debug": "^2.4.5",
     "dotenv": "^4.0.0",
@@ -57,7 +57,11 @@
     "jsonwebtoken": "7.1.9",
     "method-override": "^2.3.10",
     "mongoose": "4.7.4",
-    "node-mailjet": "^3.3.1"
+    "node-mailjet": "^3.3.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-cookiecombo": "^1.0.5",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
@@ -70,6 +74,7 @@
     "husky": "0.14.3",
     "istanbul": "1.1.0-alpha.1",
     "mocha": "3.5.0",
+    "nodemon": "^1.18.10",
     "shipit-cli": "^4.1.2",
     "shipit-deploy": "^4.1.3",
     "shipit-npm": "^0.2.0",
