--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,17 @@
 node_modules
 npm-debug.log
-Dockerfile*
-docker-compose*
-.dockerignore
 .git
 .gitignore
 README.md
 LICENSE
 .idea
+
+.env*
+
+Dockerfile*
+docker-compose*
+.dockerignore
+
+deploy.yml
+group_vars
+inventories
