--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ language: node_js
 node_js:
   - "11.10.1"
 
+services:
+  - docker
+
 script:
   - npm run lint
 
+deploy:
+  provider: script
+  script: bash docker-push.sh master-latest
+  on:
+    branch: master
