Push docker with branche name on tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ deploy:
   provider: script
   script: bash docker-push.sh latest
   on:
-    branch: master
+    branch:
+      - master
+      - staging
